Added Ball Color Tests